--- a/index.html
+++ b/index.html
@@ -1,30 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
-
-    <title>Document</title>
-</head>
-<body>
-    <link  rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href= "https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://fonts.googleapis.com/css2?amily=Chakra+Petch:ital,wght00,300;0,400;0,500;0,600;0,700;1,300"
-<title> Guiminamflix</title>
-</head>
+     href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght00,300;0,400;0,500;0,700;1,300;1,4"
+     rel="stylesheet">
+     <title>Guiminamflix</title>
+     </head>
 
+     <body>
+        <header> Guiminamflix</header>
 
-</body>
+        <section class="chamada">
+         <div class="chamada-texto">
+            <h1>atraves do aranhaverso</h1>
+            <p> #homem-aranha</p>
+            <p> acontece em uma cidade fict....</p>
+            <p>existe um cenario de desenho animados</p>
+            <p> jkhliuoilk</p>
+        </div>
+      
+    </div>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_FAEIEg2Q?si=EEv - tsY_bi820wkE"
+ title="youtube video player" framborder="0"
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;picture-im-picture; web"
+ referrerpolicy="strict-origin-when-cross-origin"allowfullscreen></iframe>
+    
+</div> 
+</section>
 
-<header>GUIMINAMFLIX</header>
-
-
-
-
-
-
-
-
-
-</body>
-</html>
+<section class="categoria">
+<h2>filmes e seris </h2>
+<div class="categoria-videos">
+<a href="https:www.youtube.com/watch?v=cs15QqG6GJC">
+ <img src="https://img.youtube.com/vi/cs15QqG6GJC/maxresdefault.jpg" />
+</a>
+<a href="https://www.youtube.com/watch?v=nCmIwcycUJB">
+    <img src ="httsps://img.youtube.com/vi/nCmIwcycUJB/maxresdefault.jpg"/>
+    </a>
+    <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+    <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg"/>
+    </a>
+    <a href="https://www.youtube.com/watch?v=Ipkw_hww-hw">
+        <img src="https://img.youtube.com/vi/Ipkw_hww-hw/maxresdefault.jpg"/>
+    </a>
+  <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+    <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg"/>
+  </a>ss
+</div>
+</section>
